--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,13 @@ GROQ_API_KEY=your_groq_api_key_here
 VITE_SUPABASE_URL=https://your-project-ref.supabase.co
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
+# Web Scraping APIs (optional but recommended for enhanced accuracy)
+# Google Custom Search API - Get from: https://developers.google.com/custom-search/v1/introduction
+GOOGLE_SEARCH_API_KEY=your_google_search_api_key_here
+GOOGLE_SEARCH_ENGINE_ID=your_custom_search_engine_id_here
+
+# News API - Get from: https://newsapi.org/
+NEWS_API_KEY=your_news_api_key_here
+
 # Development Environment
 NODE_ENV=development
