📦 PROFESSIONAL SHOWCASE: Repository Structure & Security
🎯 Professional GitHub Showcase:
- ✅ Beautiful README with badges, demo links, and key metrics
- ✅ Professional documentation structure in /docs
- ✅ Setup guide without sensitive information
- ✅ Demo documentation with test cases and performance metrics
- ✅ MIT License for open source compliance

🔒 Security & Privacy:
- ✅ Enhanced .gitignore for sensitive files protection
- ✅ Removed committed API keys and secrets
- ✅ Hidden Supabase config and temp files
- ✅ Environment variables properly documented but not exposed
- ✅ Professional-grade security practices

📋 Documentation Structure:
- README.md: Main showcase with features and quick start
- docs/SETUP.md: Detailed setup instructions
- docs/DEMO.md: Demo links and test cases
- LICENSE: MIT license for open source
- .env.example: Template for required environment variables

🚀 Ready for Showcase:
- Professional presentation for portfolio
- Clean codebase without sensitive data
- Clear setup instructions for developers
- Performance metrics and accuracy statistics
- Industry-standard documentation practices

This makes TruthGuard ready for public showcase, hiring managers, and open source community while maintaining security best practices.

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,27 @@ dist
 dist-ssr
 *.local
 
-# Environment variables
+# Environment variables (IMPORTANT: Never commit these!)
 .env
 .env.local
 .env.production
 .env.development
 supabase/.env.local
+*.env
+
+# API Keys and Secrets (NEVER COMMIT THESE)
+**/api-keys.json
+**/secrets.json
+**/*secret*
+**/*key*
+
+# Supabase sensitive files
+supabase/.temp/
+supabase/config.toml
+
+# Database dumps and backups
+*.sql.backup
+*.dump
 
 # Editor directories and files
 .vscode/*
